css/main.css
/* ... */
.highlight .gd{background-color:#FFCCCC;border:1px solid #CC0000}
.highlight .ge{font-style:italic}
.highlight .gr{color:#FF0000}
.highlight .gh{color:#003300;font-weight:bold}
.highlight .gi{background-color:#CCFFCC;border:1px solid #00CC00}
.highlight .go{color:#AAAAAA}
.highlight .gp{color:#000099;font-weight:bold}
.highlight .gs{font-weight:bold}
.highlight .gu{color:#003300;font-weight:bold}
.highlight .gt{color:#99CC66}
.highlight .kc{color:#006699;font-weight:bold}
.highlight .kd{color:#006699;font-weight:bold}
.highlight .kn{color:#006699;font-weight:bold}
.highlight .kp{color:#006699}
.highlight .kr{color:#006699;font-weight:bold}
.highlight .kt{color:#007788;font-weight:bold}
.highlight .m{color:#FF6600}
.highlight .s{color:#CC3300}
.highlight .na{color:#330099}
.highlight .nb{color:#336666}
.highlight .nc{color:#00AA88;font-weight:bold}
.highlight .no{color:#336600}
.highlight .nd{color:#9999FF}
.highlight .ni{color:#999999;font-weight:bold}
.highlight .ne{color:#CC0000;font-weight:bold}
.highlight .nf{color:#CC00FF}
.highlight .nl{color:#9999FF}
.highlight .nn{color:#00CCFF;font-weight:bold}
.highlight .nt{color:#330099;font-weight:bold}
.highlight .nv{color:#003333}
.highlight .ow{color:#000000;font-weight:bold}
.highlight .w{color:#bbbbbb}
.highlight .mf{color:#FF6600}
.highlight .mh{color:#FF6600}
.highlight .mi{color:#FF6600}
.highlight .mo{color:#FF6600}
.highlight .sb{color:#CC3300}
.highlight .sc{color:#CC3300}
.highlight .sd{color:#CC3300;font-style:italic}
.highlight .s2{color:#CC3300}
.highlight .se{color:#CC3300;font-weight:bold}
.highlight .sh{color:#CC3300}
.highlight .si{color:#AA0000}
.highlight .sx{color:#CC3300}
.highlight .sr{color:#33AAAA}
.highlight .s1{color:#CC3300}
.highlight .ss{color:#FFCC33}
.highlight .bp{color:#336666}
.highlight .vc{color:#003333}
.highlight .vg{color:#003333}
.highlight .vi{color:#003333}
.highlight .il{color:#FF6600}
.type-csharp .highlight .k{color:#0000FF}
.type-csharp .highlight .kt{color:#0000FF}
.type-csharp .highlight .nf{color:#000000;font-weight:normal}
.type-csharp .highlight .nc{color:#2B91AF}
.type-csharp .highlight .nn{color:#000000}
.type-csharp .highlight .s{color:#A31515}
.type-csharp .highlight .sc{color:#A31515}
.social-buttons-left div, .social-buttons-right div, .social-buttons-left div li a, .social-buttons-together div li a{-webkit-transition:margin .5s ease-in-out, padding .5s ease-in-out;-moz-transition:margin .5s ease-in-out, padding .5s ease-in-out;transition:margin .5s ease-in-out, padding .5s ease-in-out;}
.social-buttons-left div{margin-left:-130%;}
.social-buttons-right div{width:135px;}
.social-buttons-left.top-nav-short div{margin-left:-69%;}
.social-buttons-left div li a, .social-buttons-right div li a{opacity:0}
.social-buttons-together{margin-top:-55px;position:absolute;left:38.4%; display: none;}
.social-buttons-left, .social-buttons-right{margin-top:-55px;position:absolute;left:500%}
@media only screen and (min-width:768px){
	.social-buttons-left div li a, .social-buttons-right div li a, .social-buttons-together div li a{opacity:1;padding:15px 0px}
	.social-buttons-together{display: block;}
	.social-buttons-left, .social-buttons-right{margin-top:-55px;position:absolute;left:50%;}
	.social-buttons-right div{margin-left:52.5px;}
}
@media only screen and (min-width:930px){
	.social-buttons-left div li a, .social-buttons-right div li a, .social-buttons-together div li a{opacity:1;padding:15px 5px}
	.social-buttons-right div{margin-left:65px;}
}
@media only screen and (min-width:1200px){
	.social-buttons-left div li a, .social-buttons-right div li a, .social-buttons-together div li a{opacity:1;padding:15px 15px}
	.social-buttons-right div{margin-left:99px;}
}
body{font-family:'Andada', 'Times New Roman', serif;font-size:18px;color:#333;position:relative;background:#FFF;}
p{line-height:1.75;margin:30px 0;}
p a{color:#008AFF;}
h1,h2,h3,h4,h5,h6{font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;font-weight:800;}
a{color:#008AFF;}
a:hover,
a:focus{color:#0085a1;}
blockquote{color:#808080;font-style:italic;}
hr.small{max-width:100px;margin:15px auto;border-width:4px;border-color:inherit;border-radius:3px;}
.main-content{padding-top:80px;}
@media only screen and (min-width:768px){.main-content{padding-top:130px;}
}
.main-explain-area{font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;padding:15px inherit;}
.hideme{display:none;}
::-moz-selection{color:white;text-shadow:none;background:#0085a1;}
::selection{color:white;text-shadow:none;background:#0085a1;}
img::selection{color:white;background:transparent;}
img::-moz-selection{color:white;background:transparent;}
.disqus-comments{margin-top:30px;}
@media only screen and (min-width:768px){.disqus-comments{margin-top:40px;}
}
.navbar-custom{background:#F5F5F5;border-bottom:1px solid #EAEAEA;font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;}
.navbar-custom .nav li a{text-transform:uppercase;font-size:11px;letter-spacing:1px;}
.navbar-custom .navbar-brand,
.navbar-custom .nav li a{font-weight:800;color:#404040;}
.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus ,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus{color:#0085a1;}
@media only screen and (min-width:768px){.navbar-custom{padding:20px 0;-webkit-transition:background .25s ease-in-out,padding .25s ease-in-out;-moz-transition:background .25s ease-in-out,padding .25s ease-in-out;transition:background .25s ease-in-out,padding .25s ease-in-out;}
.navbar-custom.top-nav-short{padding:0;}
}
.navbar-custom .avatar-container{opacity:1;position:absolute;-webkit-transition:opacity 0.5s ease-in-out;-moz-transition:opacity 0.5s ease-in-out;transition:opacity 0.5s ease-in-out;left:50%;width:50px;margin-top:-25px;}
/* ... */

